--- a/buffon-website.html
+++ b/buffon-website.html
@@ -9,7 +9,25 @@
 
 
 <body>
-    
+
+    <nav class="navbar">
+        <div class="container">
+            <a href="/" class="navbar-brand">
+                Hangry
+            </a>
+
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="........" class="nav-link">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a href="......." class="nav-link">Blog</a>
+                </li>
+            </ul>
+
+            <a href="........." class="button">Contact Us</a>
+        </div>
+    </nav>
 
 </body>
 </html>
