--- a/buffon-website.html
+++ b/buffon-website.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gianluigi Buffon Website </title>
+    <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -12,22 +14,55 @@
 
     <nav class="navbar">
         <div class="container">
-            <a href="/" class="navbar-brand">
-                Hangry
+            <a href="/" class="col-10">
+                Gianluigi Buffon
             </a>
-
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href="........" class="nav-link">About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a href="......." class="nav-link">Blog</a>
-                </li>
-            </ul>
-
-            <a href="........." class="button">Contact Us</a>
+            <a href="/" class="col-2">
+                Contact Me
+            </a>
         </div>
     </nav>
 
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-7">
+                    <h5>My Website</h5>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dolor consequuntur omnis eligendi, maxime at beatae quas!
+                        Quibusdam facilis a ratione sunt dignissimos maxime. Architecto.
+                        Reprehenderit natus numquam, culpa cum delectus repudiandae reiciendis?
+                    </p>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-4">
+                    <h5>Navigate</h5>
+                    <ul>
+                        <li>
+                            <a href="/">Home</a>
+                        </li>
+                        <li>
+                            <a href="about.html">About Us</a>
+                        </li>
+                        <li>
+                            <a href="blog-list.html">Blog</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="separator"></div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="centered">
+                        &copy; 2022, Not Redd
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
