--- a/buffon-website.html
+++ b/buffon-website.html
@@ -15,11 +15,30 @@
     <nav class="navbar">
         <div class="container">
             <a href="/" class="col-10">
-                Gianluigi Buffon
+                <img src="assets/Images/buffon logo.png" alt="Gianluigi Buffon">
             </a>
             <a href="/" class="col-2">
                 Contact Me
             </a>
+        </div>
+        <div class="heading">
+            <ul class="navbar-nav">
+                <li>
+                    <a href="/" class="nav-link">Home</a>
+                </li>
+                <li>
+                    <a href="/" class="nav-link">Articles</a>
+                </li>
+                <li>
+                    <a href="/" class="nav-link">Honours</a>
+                </li>
+                <li>
+                    <a href="/" class="nav-link">Career Highlights</a>
+                </li>
+                <li>
+                    <a href="/" class="nav-link">About Me</a>
+                </li>
+            </ul>
         </div>
     </nav>
 
@@ -58,7 +77,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="centered">
-                        &copy; 2022, Not Redd
+                        &copy; 2022,  Gianluigi Buffon
                     </div>
                 </div>
             </div>
