Created Home Page Articles
+Added main article
+Added suggested articles

--- a/buffon-website.html
+++ b/buffon-website.html
@@ -42,6 +42,50 @@
         </div>
     </nav>
 
+    <main>
+        <div class="article">
+            <div class="container">
+                <div class="row">
+                        <div class="col-4">
+                            <img src="assets/Images/buffon_suit.png" alt="Buffon Suit" class="img">
+                        </div>
+                        <div class="col-1"></div>
+                        <div class="col-7">
+                            <h1>Gianluigi Buffon: A Goalkeeping Legacy</h1>
+                            <p class="article-text">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea delectus consequuntur numquam. Quia amet dolor eaque provident distinctio architecto, delectus consectetur adipisci, veritatis molestiae, quod aut sequi deserunt inventore praesentium?
+                                Unde architecto quas, praesentium molestias eius minima animi eligendi dolorum? Tenetur, fugiat dolorem. Animi nemo eos numquam veritatis, culpa dolore id magni nobis reprehenderit quam sit corporis qui omnis neque.
+                                Molestiae ratione sint officia voluptates nisi. Odio vero laudantium autem eveniet quasi maxime magnam unde consectetur minima est fuga ex, cumque ipsam quisquam dolorum at non officia hic? Fuga, officiis.
+                                Expedita, modi, blanditiis officia est laborum recusandae laboriosam consequatur impedit eveniet quam tempora aliquam quos? Adipisci consequuntur in et explicabo eaque magnam omnis, est corporis nemo recusandae illo ad ea.
+                                Consectetur labore doloribus laboriosam non sit ad voluptatibus id magni itaque tempore facilis debitis quaerat accusantium dignissimos, porro velit animi quod. Soluta ipsam doloribus recusandae impedit voluptas ut eum quidem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis architecto nulla eveniet numquam unde possimus explicabo et accusantium maxime, ea quod similique quaerat sequi eligendi. Nesciunt, eveniet molestiae. Aperiam, dignissimos.
+                                Quia repellat suscipit aspernatur, cumque saepe consectetur pariatur, itaque beatae in ea odio nihil alias corrupti? Perferendis quae soluta reiciendis unde pariatur modi sit molestias necessitatibus, architecto maiores, dignissimos perspiciatis?
+                            </p>
+                        </div>
+                    </div>
+            </div>
+        </div>
+
+        <div class="article">
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <img src="assets/Images/buffon_worldcup.jpg" alt="buffon world cup" class="img2">
+                    </div>
+                    <div class="col-3">
+                        <img src="assets/Images/buffon_leaving_juve.jpg" alt="buffon parma" class="img2">
+                    </div>
+                    <div class="col-3">
+                        <img src="assets/Images/buffon_signing_psg.jpg" alt="buffon psg signing" class="img2">
+                    </div>
+                    <div class="col-3 more-articles">
+                            <h3>More Articles...</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
     <footer>
         <div class="container">
             <div class="row">
