Created About Me Section
+Added about me section for home page

--- a/buffon-website.html
+++ b/buffon-website.html
@@ -83,6 +83,32 @@
                 </div>
             </div>
         </div>
+
+        
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <img src="assets/Images/buffon_profile.jpg" alt="profile" class="img3">
+                </div>
+                <div class="col-1"></div>
+                <div class="col-7 article article-text">
+                    <h2>About Me</h2>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem eligendi esse laborum quos ea facilis adipisci molestiae earum possimus. Iusto, optio nobis tempore explicabo inventore ipsam et hic aliquid adipisci.
+                        Ut voluptatibus ducimus voluptatum. Voluptates quaerat nisi iste, temporibus fugit molestias earum tempore expedita sed a delectus porro voluptatibus repellendus pariatur placeat, optio vel quos, laboriosam cum ducimus dolor excepturi!
+                        Est harum repellendus sequi voluptates non odit quae error, ratione nihil. Aspernatur reprehenderit non maxime cupiditate nostrum magnam necessitatibus impedit dicta nulla voluptas debitis cum, corrupti eveniet blanditiis enim quam?
+                        Dicta cupiditate itaque rerum repellendus autem minima vitae pariatur reprehenderit corporis asperiores illum expedita deserunt, at in, maiores nisi dolores? Possimus assumenda vel modi aspernatur delectus. Iure nisi voluptatibus non!
+                        Maiores aspernatur reiciendis necessitatibus harum iure error facere laboriosam ut, tempore doloribus debitis obcaecati, laudantium vitae dignissimos nemo sint distinctio perspiciatis. Autem ipsa ducimus id quas quibusdam ipsam perferendis sint.
+                    </p>
+                    <h3 class="more-articles">Read More...</h3>
+                </div>
+            </div>
+        </div>
     </main>
 
 
