--- a/buffon-website.html
+++ b/buffon-website.html
@@ -60,6 +60,7 @@
                                 Consectetur labore doloribus laboriosam non sit ad voluptatibus id magni itaque tempore facilis debitis quaerat accusantium dignissimos, porro velit animi quod. Soluta ipsam doloribus recusandae impedit voluptas ut eum quidem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis architecto nulla eveniet numquam unde possimus explicabo et accusantium maxime, ea quod similique quaerat sequi eligendi. Nesciunt, eveniet molestiae. Aperiam, dignissimos.
                                 Quia repellat suscipit aspernatur, cumque saepe consectetur pariatur, itaque beatae in ea odio nihil alias corrupti? Perferendis quae soluta reiciendis unde pariatur modi sit molestias necessitatibus, architecto maiores, dignissimos perspiciatis?
                             </p>
+                            <h3 class="more-articles">Read more...</h3>
                         </div>
                     </div>
             </div>
@@ -105,7 +106,7 @@
                         Dicta cupiditate itaque rerum repellendus autem minima vitae pariatur reprehenderit corporis asperiores illum expedita deserunt, at in, maiores nisi dolores? Possimus assumenda vel modi aspernatur delectus. Iure nisi voluptatibus non!
                         Maiores aspernatur reiciendis necessitatibus harum iure error facere laboriosam ut, tempore doloribus debitis obcaecati, laudantium vitae dignissimos nemo sint distinctio perspiciatis. Autem ipsa ducimus id quas quibusdam ipsam perferendis sint.
                     </p>
-                    <h3 class="more-articles">Read More...</h3>
+                    <h3 class="more-articles">Read more...</h3>
                 </div>
             </div>
         </div>
@@ -132,13 +133,19 @@
                             <a href="/">Home</a>
                         </li>
                         <li>
-                            <a href="about.html">About Us</a>
+                            <a href="/">Articles</a>
                         </li>
                         <li>
-                            <a href="blog-list.html">Blog</a>
+                            <a href="/">Honours</a>
                         </li>
                         <li>
-                            <a href="contact.html">Contact Us</a>
+                            <a href="/">Career Highlights</a>
+                        </li>
+                        <li>
+                            <a href="/">About Me</a>
+                        </li>
+                        <li>
+                            <a href="/">Contact Me</a>
                         </li>
                     </ul>
                 </div>
