--- a/home-page-buffon.html
+++ b/home-page-buffon.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Gianluigi Buffon Website </title>
+    <title>Home Page - Gianluigi Buffon </title>
     <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -24,10 +24,10 @@
         <div class="heading">
             <ul class="navbar-nav">
                 <li>
-                    <a href="/" class="nav-link">Home</a>
+                    <a href="home-page-buffon.html" class="nav-link">Home</a>
                 </li>
                 <li>
-                    <a href="/" class="nav-link">Articles</a>
+                    <a href="articles-page-buffon.html" class="nav-link">Articles</a>
                 </li>
                 <li>
                     <a href="/" class="nav-link">Honours</a>
