Completed Articles Page
+ Added all the small articles
+ Finished articles page

--- a/articles-page-buffon.html
+++ b/articles-page-buffon.html
@@ -42,7 +42,105 @@
         </div>
     </nav>
 
+    <main>
+        <div class="article">
+            <div class="container">
+                <div class="row">
+                        <div class="col-4">
+                            <img src="assets/Images/buffon_suit.png" alt="Buffon Suit" class="img">
+                        </div>
+                        <div class="col-1"></div>
+                        <div class="col-7">
+                            <h1>Gianluigi Buffon: A Goalkeeping Legacy</h1>
+                            <p class="article-text">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea delectus consequuntur numquam. Quia amet dolor eaque provident distinctio architecto, delectus consectetur adipisci, veritatis molestiae, quod aut sequi deserunt inventore praesentium?
+                                Unde architecto quas, praesentium molestias eius minima animi eligendi dolorum? Tenetur, fugiat dolorem. Animi nemo eos numquam veritatis, culpa dolore id magni nobis reprehenderit quam sit corporis qui omnis neque.
+                                Molestiae ratione sint officia voluptates nisi. Odio vero laudantium autem eveniet quasi maxime magnam unde consectetur minima est fuga ex, cumque ipsam quisquam dolorum at non officia hic? Fuga, officiis.
+                                Expedita, modi, blanditiis officia est laborum recusandae laboriosam consequatur impedit eveniet quam tempora aliquam quos? Adipisci consequuntur in et explicabo eaque magnam omnis, est corporis nemo recusandae illo ad ea.
+                                Consectetur labore doloribus laboriosam non sit ad voluptatibus id magni itaque tempore facilis debitis quaerat accusantium dignissimos, porro velit animi quod. Soluta ipsam doloribus recusandae impedit voluptas ut eum quidem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis architecto nulla eveniet numquam unde possimus explicabo et accusantium maxime, ea quod similique quaerat sequi eligendi. Nesciunt, eveniet molestiae. Aperiam, dignissimos.
+                                Quia repellat suscipit aspernatur, cumque saepe consectetur pariatur, itaque beatae in ea odio nihil alias corrupti? Perferendis quae soluta reiciendis unde pariatur modi sit molestias necessitatibus, architecto maiores, dignissimos perspiciatis?
+                            </p>
+                            <h3 class="more-articles">Read more...</h3>
+                        </div>
+                    </div>
+            </div>
+        </div>
 
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <img src="assets/Images/buffon_worldcup.jpg" alt="buffon world cup" class="img4">
+                        <h2 class="centered background">2006 World Cup Champion - Road to Glory (Movie)</h2>
+                    </div>
+                    <div class="col-6">
+                        <img src="assets/Images/buffon_leaving_juve.jpg" alt="buffon leaving juve" class="img4">
+                        <h2 class="centered background">Leaving the Old Lady: Watch Buffon's last game with Juventus</h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <img src="assets/Images/buffon_parma_new.jpeg" alt="buffon parma" class="img4">
+                        <h2 class="centered background">Buffon re-joins boyhood club Parma with hopes of promoting them back to the Serie</h2>
+                    </div>
+                    <div class="col-6">
+                        <img src="assets/Images/buffon_signing_psg.jpg" alt="buffon psg signing" class="img4">
+                        <h2 class="centered background">PSG Surprise Transfer as 40 year old Gianluigi Buffon Signs 1-year deal with the club</h2>
+                    </div>
+                </div>
+            </div>
+    </main>
+
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-7">
+                    <h5>My Website</h5>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dolor consequuntur omnis eligendi, maxime at beatae quas!
+                        Quibusdam facilis a ratione sunt dignissimos maxime. Architecto.
+                        Reprehenderit natus numquam, culpa cum delectus repudiandae reiciendis?
+                    </p>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-4">
+                    <h5>Navigate</h5>
+                    <ul>
+                        <li>
+                            <a href="home-page-buffon.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="articles-page-buffon.html">Articles</a>
+                        </li>
+                        <li>
+                            <a href="/">Honours</a>
+                        </li>
+                        <li>
+                            <a href="/">Career Highlights</a>
+                        </li>
+                        <li>
+                            <a href="/">About Me</a>
+                        </li>
+                        <li>
+                            <a href="/">Contact Me</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="separator"></div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="centered">
+                        &copy; 2022,  Gianluigi Buffon
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
