--- a/home-page-buffon.html
+++ b/home-page-buffon.html
@@ -130,10 +130,10 @@
                     <h5>Navigate</h5>
                     <ul>
                         <li>
-                            <a href="/">Home</a>
+                            <a href="home-page-buffon.html">Home</a>
                         </li>
                         <li>
-                            <a href="/">Articles</a>
+                            <a href="articles-page-buffon.html">Articles</a>
                         </li>
                         <li>
                             <a href="/">Honours</a>
@@ -160,5 +160,7 @@
             </div>
         </div>
     </footer>
+
+    
 </body>
 </html>
