Created Honours Page
+Created Honours Page
+Linked all pages together

--- a/home-page-buffon.html
+++ b/home-page-buffon.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home Page - Gianluigi Buffon </title>
+    <title>Home Page - Gianluigi Buffon</title>
     <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -30,7 +30,7 @@
                     <a href="articles-page-buffon.html" class="nav-link">Articles</a>
                 </li>
                 <li>
-                    <a href="/" class="nav-link">Honours</a>
+                    <a href="honours-page-buffon.html" class="nav-link">Honours</a>
                 </li>
                 <li>
                     <a href="/" class="nav-link">Career Highlights</a>
@@ -51,7 +51,7 @@
                         </div>
                         <div class="col-1"></div>
                         <div class="col-7">
-                            <h1>Gianluigi Buffon: A Goalkeeping Legacy</h1>
+                            <h1>Gianluigi Buffon: A Goalkeeping Legacy: Autobiography</h1>
                             <p class="article-text">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea delectus consequuntur numquam. Quia amet dolor eaque provident distinctio architecto, delectus consectetur adipisci, veritatis molestiae, quod aut sequi deserunt inventore praesentium?
                                 Unde architecto quas, praesentium molestias eius minima animi eligendi dolorum? Tenetur, fugiat dolorem. Animi nemo eos numquam veritatis, culpa dolore id magni nobis reprehenderit quam sit corporis qui omnis neque.
@@ -136,7 +136,7 @@
                             <a href="articles-page-buffon.html">Articles</a>
                         </li>
                         <li>
-                            <a href="/">Honours</a>
+                            <a href="honours-page-buffon.html">Honours</a>
                         </li>
                         <li>
                             <a href="/">Career Highlights</a>
