Continued Hounours Page
+Added 2 trophies

--- a/articles-page-buffon.html
+++ b/articles-page-buffon.html
@@ -117,7 +117,7 @@
                             <a href="articles-page-buffon.html">Articles</a>
                         </li>
                         <li>
-                            <a href="hon">Honours</a>
+                            <a href="honours-page-buffon.html">Honours</a>
                         </li>
                         <li>
                             <a href="/">Career Highlights</a>
