--- a/honours-page-buffon.html
+++ b/honours-page-buffon.html
@@ -43,8 +43,52 @@
     </nav>
 
     <main>
-        <div>
-            
+        <div class="col-honours">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        /
+                    </div>
+                    <div class="col-8 honours-page">
+                        <div class="container padding0">
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="assets/Images/uefa_mens_best_player.png" alt="uefa mens player of the year" class="img5">
+                                </div>
+                                <div class="col-9">
+                                    <h2>UEFA Best Player of the Year </h2> 
+                                    <h4>Juventus F.C.</h4>
+                                    <h4>2003</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-honours">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        /
+                    </div>
+                    <div class="col-8 honours-page">
+                        <div class="container padding0">
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="assets/Images/world_cup_trophy.png" alt="uefa mens player of the year" class="img5">
+                                </div>
+                                <div class="col-9">
+                                    <h2>World Cup Winner</h2> 
+                                    <h4>Italy National Team</h4>
+                                    <h4>2006</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
