--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="heading">
             <ul class="navbar-nav">
                 <li>
-                    <a href="home-page-buffon.html" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li>
                     <a href="articles-page-buffon.html" class="nav-link">Articles</a>
@@ -130,7 +130,7 @@
                     <h5>Navigate</h5>
                     <ul>
                         <li>
-                            <a href="home-page-buffon.html">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
                             <a href="articles-page-buffon.html">Articles</a>
