Completed all honours
+Completed all trophies on onours page

--- a/honours-page-buffon.html
+++ b/honours-page-buffon.html
@@ -56,9 +56,8 @@
                                     <img src="assets/Images/uefa_mens_best_player.png" alt="uefa mens player of the year" class="img5">
                                 </div>
                                 <div class="col-9">
-                                    <h2>UEFA Best Player of the Year </h2> 
-                                    <h4>Juventus F.C.</h4>
-                                    <h4>2003</h4>
+                                    <h2>UEFA Best Player of the Year (x1)</h2> 
+                                    <h4>Juventus F.C. - 2003</h4>
                                 </div>
                             </div>
                         </div>
@@ -77,12 +76,221 @@
                         <div class="container padding0">
                             <div class="row">
                                 <div class="col-3">
-                                    <img src="assets/Images/world_cup_trophy.png" alt="uefa mens player of the year" class="img5">
+                                    <img src="assets/Images/world_cup_trophy.png" alt="world cup trophy" class="img5">
                                 </div>
                                 <div class="col-9">
-                                    <h2>World Cup Winner</h2> 
-                                    <h4>Italy National Team</h4>
-                                    <h4>2006</h4>
+                                    <h2>World Cup Winner (x1)</h2> 
+                                    <h4>Italy National Team - 2006</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-honours">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        /
+                    </div>
+                    <div class="col-8 honours-page">
+                        <div class="container padding0">
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="assets/Images/serie_a_trophy.png" alt="serie a trophy" class="img5">
+                                </div>
+                                <div class="col-9">
+                                    <h2>Serie A Italian Champion (x10)</h2> 
+                                    <h4>Juventus F.C.</h4>
+                                    <h4>01/02, 02/03, 11/12, 12/13, 13/14, 14/15, 15/16, 16/17, 17/18, 19/20</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-honours">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        /
+                    </div>
+                    <div class="col-8 honours-page">
+                        <div class="container padding0">
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="assets/Images/supercoppa_trophy.png" alt="supercoppa" class="img5">
+                                </div>
+                                <div class="col-9">
+                                    <h2>Italian Supercoppa Champion (x7)</h2> 
+                                    <h4>AC Parma - 99/00</h4>
+                                    <h4>Juventus F.C. - 02/03, 03/04, 12/13, 13/14, 15/16, 20/21</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-honours">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        /
+                    </div>
+                    <div class="col-8 honours-page">
+                        <div class="container padding0">
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="assets/Images/uefa_europaleague.png" alt="europe league trophy" class="img5">
+                                </div>
+                                <div class="col-9">
+                                    <h2>UEFA Europa League Winner (x1)</h2> 
+                                    <h4>AC Parma - 98/99</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-honours">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        /
+                    </div>
+                    <div class="col-8 honours-page">
+                        <div class="container padding0">
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="assets/Images/coppa_italia_trophy.png" alt="coppa italia" class="img5">
+                                </div>
+                                <div class="col-9">
+                                    <h2>Coppa Italia Champion (x6)</h2> 
+                                    <h4>AC Parma - 98/99</h4>
+                                    <h4>Juventus F.C. - 14/15, 15/16, 16/17, 17/18, 20/21</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-honours">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        /
+                    </div>
+                    <div class="col-8 honours-page">
+                        <div class="container padding0">
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="assets/Images/ligue_1_trophy.png" alt="ligue 1 trophy" class="img5">
+                                </div>
+                                <div class="col-9">
+                                    <h2>Ligue 1 French Champion (x1)</h2> 
+                                    <h4>Paris Saint-Germain - 18/19</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-honours">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        /
+                    </div>
+                    <div class="col-8 honours-page">
+                        <div class="container padding0">
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="assets/Images/french_supercup.png" alt="french supercup" class="img5">
+                                </div>
+                                <div class="col-9">
+                                    <h2>French Supercup (x1)</h2> 
+                                    <h4>Paris Saint-Germain - 18/19</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-honours">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        /
+                    </div>
+                    <div class="col-8 honours-page">
+                        <div class="container padding0">
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="assets/Images/ITALIENISCHER_trophy.png" alt="serie b promotion" class="img5">
+                                </div>
+                                <div class="col-9">
+                                    <h2>Italienischer Zweitligameister Serie B Play-off Trophy (x1)</h2> 
+                                    <h4>Juventus F.C. - 06/07</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-honours">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        /
+                    </div>
+                    <div class="col-8 honours-page">
+                        <div class="container padding0">
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="assets/Images/footballer of the year.png" alt="footballer of the year" class="img5">
+                                </div>
+                                <div class="col-9">
+                                    <h2>Italy Footballer of the Year Award (x1)</h2> 
+                                    <h4>Juventus F.C. - 2017</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-honours">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        /
+                    </div>
+                    <div class="col-8 honours-page">
+                        <div class="container padding0">
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="assets/Images/tm_pots.png" alt="u21 champion" class="img5">
+                                </div>
+                                <div class="col-9">
+                                    <h2>Transfermarkt Player of the Season (x1)</h2> 
+                                    <h4>Italy - 2016, 2018</h4>
                                 </div>
                             </div>
                         </div>
