Completed Honours Page
+ Finished honours page

--- a/honours-page-buffon.html
+++ b/honours-page-buffon.html
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        /
+                        <img src="assets/Images/uefa_ceremony.webp" alt="uefa ceremony" class="img6">
                     </div>
                     <div class="col-8 honours-page">
                         <div class="container padding0">
@@ -70,7 +70,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        /
+                        <img src="assets/Images/world_cup_kiss.avif" alt="world cup kiss" class="img6">
                     </div>
                     <div class="col-8 honours-page">
                         <div class="container padding0">
@@ -93,7 +93,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        /
+                        <img src="assets/Images/serie_a_win.jpg" alt="serie a lift" class="img6">
                     </div>
                     <div class="col-8 honours-page">
                         <div class="container padding0">
@@ -117,7 +117,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        /
+                        <img src="assets/Images/supercoppa_lift.jpg" alt="supercoppa lift" class="img6">
                     </div>
                     <div class="col-8 honours-page">
                         <div class="container padding0">
@@ -141,7 +141,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        /
+                        <img src="assets/Images/europa_league_lift.png" alt="europaleague lift" class="img6">
                     </div>
                     <div class="col-8 honours-page">
                         <div class="container padding0">
@@ -164,7 +164,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        /
+                        <img src="assets/Images/coppa_italia_lift.jpg" alt="coppa italia lift" class="img6">
                     </div>
                     <div class="col-8 honours-page">
                         <div class="container padding0">
@@ -188,7 +188,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        /
+                        <img src="assets/Images/ligue_1_lift.jpg" alt="ligue 1 lift" class="img6">
                     </div>
                     <div class="col-8 honours-page">
                         <div class="container padding0">
@@ -211,7 +211,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        /
+                        <img src="assets/Images/french_lift.jpg" alt="french supercup" class="img6">
                     </div>
                     <div class="col-8 honours-page">
                         <div class="container padding0">
@@ -234,7 +234,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        /
+                        <img src="assets/Images/serie_b.jpg" alt="serie b" class="img6">
                     </div>
                     <div class="col-8 honours-page">
                         <div class="container padding0">
@@ -257,7 +257,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        /
+                        <img src="assets/Images/year_trophy.webp" alt="foty" class="img6">
                     </div>
                     <div class="col-8 honours-page">
                         <div class="container padding0">
@@ -280,7 +280,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        /
+                        <img src="assets/Images/tm_pots_trphy.jpg" alt="tm pots" class="img6">
                     </div>
                     <div class="col-8 honours-page">
                         <div class="container padding0">
