Created Career Highlights Page
+ Created new page
+ Linked all pages together

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="honours-page-buffon.html" class="nav-link">Honours</a>
                 </li>
                 <li>
-                    <a href="/" class="nav-link">Career Highlights</a>
+                    <a href="career-highlights-page-buffon.html" class="nav-link">Career Highlights</a>
                 </li>
                 <li>
                     <a href="/" class="nav-link">About Me</a>
@@ -139,7 +139,7 @@
                             <a href="honours-page-buffon.html">Honours</a>
                         </li>
                         <li>
-                            <a href="/">Career Highlights</a>
+                            <a href="career-highlights-page-buffon.html">Career Highlights</a>
                         </li>
                         <li>
                             <a href="/">About Me</a>
