First highlight done
+ Completed first highlight

--- a/career-highlights-page-buffon.html
+++ b/career-highlights-page-buffon.html
@@ -39,7 +39,25 @@
     </div>
 </nav>
 
-
+<main>
+    <div class="article">
+        <div class="container">
+            <div class="row">
+                <div class="col-5">
+                    <img src="assets/Images/save_zidane.jpg" alt="save vs france" class="img7">
+                </div>
+                <div class="col-1"></div>
+                <div class="col-6">
+                    <h1 class="article-text">On this Day in 2006: The Save that won Italy their 4th World Cup</h1>
+                    <p class="article-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos blanditiis repellat iusto praesentium perferendis nobis in nulla labore doloribus sequi placeat, enim qui veritatis. Fugit corporis dolorum aperiam consequuntur sit.
+                        Ea, reiciendis officia. Veniam, in. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti numquam, repellat ullam mollitia architecto voluptatum explicabo? Dolore quis amet nulla delectus tempora iusto vitae iure, sit, ipsum eligendi, commodi similique!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 
 
 
