Completed Career Highlights Page
+Finished full page

--- a/career-highlights-page-buffon.html
+++ b/career-highlights-page-buffon.html
@@ -57,6 +57,24 @@
             </div>
         </div>
     </div>
+    <div class="article">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <img src="assets/Images/save_parma.jpg" alt="save parma" class="img2">
+                </div>
+                <div class="col-3">
+                    <img src="assets/Images/save_black.jpg" alt="save" class="img2">
+                </div>
+                <div class="col-3">
+                    <img src="assets/Images/save_77.jpg" alt="save 77" class="img2">
+                </div>
+                <div class="col-3 more-articles">
+                    <h3>More Career Highlights ...</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 
 
