Created About me page
+Added about me page
+Linked all pages together

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="career-highlights-page-buffon.html" class="nav-link">Career Highlights</a>
                 </li>
                 <li>
-                    <a href="/" class="nav-link">About Me</a>
+                    <a href="about-me-buffon.html" class="nav-link">About Me</a>
                 </li>
             </ul>
         </div>
@@ -142,7 +142,7 @@
                             <a href="career-highlights-page-buffon.html">Career Highlights</a>
                         </li>
                         <li>
-                            <a href="/">About Me</a>
+                            <a href="about-me-buffon.html">About Me</a>
                         </li>
                         <li>
                             <a href="/">Contact Me</a>
