--- a/career-highlights-page-buffon.html
+++ b/career-highlights-page-buffon.html
@@ -33,7 +33,7 @@
                 <a href="career-highlights-page-buffon.html" class="nav-link">Career Highlights</a>
             </li>
             <li>
-                <a href="/" class="nav-link">About Me</a>
+                <a href="about-me-buffon.html" class="nav-link">About Me</a>
             </li>
         </ul>
     </div>
@@ -109,7 +109,7 @@
                         <a href="career-highlights-page-buffon.html">Career Highlights</a>
                     </li>
                     <li>
-                        <a href="/">About Me</a>
+                        <a href="about-me-buffon.html">About Me</a>
                     </li>
                     <li>
                         <a href="/">Contact Me</a>
